Fix the z-index

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -118,7 +118,7 @@ $field_migration_to_the_left: 65px;
   cursor: not-allowed;
 }
 
-#season_transition_message_or_water_entry_failure_message_container {
+#season_transition_message_or_water_entry_failure_message {
   z-index: 7000
 }
 
